--- a/src/formalisation/formalisation.tex
+++ b/src/formalisation/formalisation.tex
@@ -142,7 +142,7 @@ Des processus existent de plus au-dessus de segments, qui sont signifiés par un
 \subsection{Première tentative de formalisation}
 Cette section présente la première idée qui a été pensée pour résoudre ce problème.
 
-L'idée principale est d'exécuter les segments en les coupant au moment ou les segments suivants sont sensés partir en considérant les délais de transmission entre nœuds, puis de continuer leur exécution dans un autre segment.
+L'idée principale est d'exécuter les segments en les coupant au moment ou les segments suivants sont censés partir en considérant les délais de transmission entre nœuds, puis de continuer leur exécution dans un autre segment.
  
 \subsubsection{Opérations définies sur segment}
 On considère que dans l'état initial du système, tous les segments sont situés sur le même nœud.
