--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -482,5 +482,67 @@ address = {Los Alamitos, CA, USA},
 	pages={838-843}, 
 	keywords={Petri nets;computer games;formal logic;trees (mathematics);Petri net;WorkFlow nets;game modeling;linear logic;proof trees;video game design process;Analytical models;Availability;Context;Games;Unified modeling language;Vegetation;Visualization;Linear logic;Petri net;Soundness;Video Games;WorkFlow net}, 
 	doi={10.1109/ICSMC.2011.6083757}, 
-	ISSN={1062-922X},}
-	
+	ISSN={1062-922X},
+}
+
+@article{mills1991internet,
+	title={Internet time synchronization: the network time protocol},
+	author={Mills, David L},
+	journal={Communications, IEEE Transactions on},
+	volume={39},
+	number={10},
+	pages={1482--1493},
+	year={1991},
+	publisher={IEEE}
+}
+
+@inproceedings{hsu2012measurement,
+	title={A measurement of time synchronization on mobile devices},
+	author={Hsu, Wang-Hsin and Liu, You-Shun and Lin, Wen-Yen and Tai, Wei-Chen and Wu, Jung-Shyr},
+	booktitle={Instrumentation and Measurement Technology Conference (I2MTC), 2012 IEEE International},
+	pages={2692--2694},
+	year={2012},
+	organization={IEEE}
+}
+
+@inproceedings{peng2009research,
+	title={The research of precision time protocol IEEE1588},
+	author={Peng-Fei, Yu and Qiang, Yu and Hui, Deng and Xing-chuan, Bao and Yuan-yuan, Ma},
+	booktitle={the international conference on Electrical Engineering},
+	year={2009}
+}
+
+@article{scheiterer2009synchronization,
+	title={Synchronization performance of the precision time protocol in industrial automation networks},
+	author={Scheiterer, Ruxandra Lupas and Na, Chongning and Obradovic, Dragan and Steindl, G{\"u}nter},
+	journal={Instrumentation and Measurement, IEEE Transactions on},
+	volume={58},
+	number={6},
+	pages={1849--1857},
+	year={2009},
+	publisher={IEEE}
+}
+
+@article{elson2002fine,
+	title={Fine-grained network time synchronization using reference broadcasts},
+	author={Elson, Jeremy and Girod, Lewis and Estrin, Deborah},
+	journal={ACM SIGOPS Operating Systems Review},
+	volume={36},
+	number={SI},
+	pages={147--163},
+	year={2002},
+	publisher={ACM}
+}
+
+@article{abari2014one,
+	title={One Clock to Rule Them All: A Primitive for Distributed Wireless Protocols at the Physical Layer},
+	author={Abari, Omid and Rahul, Hariharan and Katabi, Dina},
+	year={2014}
+}
+
+@inproceedings{syed2006time,
+	title={Time Synchronization for High Latency Acoustic Networks.},
+	author={Syed, Affan A and Heidemann, John S},
+	booktitle={INFOCOM},
+	year={2006}
+}
