--- a/src/existant.tex
+++ b/src/existant.tex
@@ -214,36 +214,18 @@ En pratique, il existe deux méthodes couramment utilisées pour garantir une sy
 
 Elle emploie une structure en arbres avec plusieurs niveaux, chacun communiquant uniquement avec ses niveaux supérieurs et inférieurs.
 
-Elle permet une synchronisation de l'ordre de (TODO)
+Elle permet une synchronisation de l'ordre de quelques millisecondes seulement à l'échelle de l'internet \cite{mills1991internet}.
 \subparagraph{PTP} (\textit{Precision Time Protocol}) est une méthode qui a été développée après \brand{NTP}, et qui est optimisée pour les réseaux locaux requérant une plus grande précision que celle que peut offrir \brand{PTP}.
 
-Elle permet une synchronisation de l'ordre de (TODO)
+Elle permet une synchronisation de l'ordre de $\num{1}\si{\micro\second}$ \cite{peng2009research, scheiterer2009synchronization}. La viabilité des algorithmes utilisés par \ac{PTP} sur systèmes \brand{Android} a été démontrée dans \cite{hsu2012measurement}.
 
-\ac{PTP}
-Cf. articles sur précision sur Android : 
-A Measurement of Time synchronization on Mobile Devices.
+En revanche, le nombre de paquets transmis est plus élevé que dans le cas de \ac{NTP}, ce qi peut poser problème en cas de charge élevée sur le réseau.
+\subsubsection{Autres approches}
+Une méthode dédiée aux réseaux ayant une possibilité de \textit{broadcast}, c'est-à-dire de transmission à tous les clients, a été présentée dans \cite{elson2002fine}. Elle offre de meilleures performances que \ac{NTP}, et possède comme différence avec les méthodes couramment utilisées la non-transmission de timestamps : les horloges sont déduites à partir des temps d'arrivée des messages.
 
-Comparer avec NTP + implémentation existantes.
+D'autres approches ont essayé d'utiliser d'autres couches que les couches applicatives pour synchroniser les horloges. C'est le cas de \cite{abari2014one} : une approche dédiée aux réseaux sans-fil, qui modifie directement les couches physiques pour qu'elles se synchronisent entre elles automatiquement sur une horloge unique, présente dans le signal sans-fil, plutôt que sur leurs horloges internes généralement gérées par des quartz dont la fréquence peut être légèrement variable.
 
-\subsubsection{Travaux plus récents}
-(TODO mieux catégoriser)
-Distributed synchronization under uncertainty: A fuzzy approach
-
-Fine-grained network time synchronization using reference broadcasts
-
-Subscription-Notification mechanisms for synchronization of distributed states
-
-One Clock to Rule Them All: A Primitive for Distributed Wireless Protocols at the Physical Layer
-
-Distributed network synchronization: the internet and electric power grids
-
-Riccati Design for Synchronization of Discrete-Time Systems (bof)
-
-Riccati Design for Synchronization of Continuous-Time Systems
-
-Time Synchronization for High Latency Acoustic Networks
-
-
+Enfin, des recherches ont été faites pour gérer les cas de réseaux peu fiables et possédant de grandes latences. Un mécanisme pour gérer les synchronisations par transmission acoustique dans des milieux marins est présenté dans \cite{syed2006time}. Ces cas ont des contraintes très importantes en terme de débits et de pertes de bits, ce qui force l'utilisation d'algorithmes dédiés, qui prennent notamment en compte le décalage d'horloges (\textit{clock skew}) qui peut être particulièrement important.
 \subsection{Estimation de la latence}
 \label{section:latence}
 Network latency estimation % http://www.google.com/patents/US8254264B1
@@ -261,8 +243,8 @@ Le projet \ac{OSSIA}
 Modelling Data Processing for Interactive Scores Using Coloured Petri Nets
 
 
-\subsection{Les réseaux de Petri dans OSSIA}
 \subsection{Scénarios interactifs}
 \subsection{Temps souple}
+\subsection{Les réseaux de Petri dans OSSIA}
 \subsection{Exemple dans le formalisme OSSIA}
 
