--- a/src/acronymes.tex
+++ b/src/acronymes.tex
@@ -11,7 +11,8 @@
 \acrodef{PTP}{Precision Time Protocol}
 \acrodef{GPIO}{General-Purpose Input/Output}
 \acrodef{PNML}{Petri Net Markup Language}
-
+\acrodef{NTCC}{Non-deterministic Concurrent Constraint Calculus}
+\acrodef{FauST}{Functional audio STream }
 \acrodef{CRR}{Conservatoire à rayonnement régional}
 \acrodef{MCLT}{Modulated Complex Lapped Transform}
 \acrodef{LSB}{Least Significant Bit}
