--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -5,6 +5,13 @@
 	school={PhD thesis, Universit{\'e} de Bordeaux}
 }
 
+@unpublished{beurive2000logiciel,
+	author = {Beurivé, Anthony},
+	title = {Un logiciel de composition musicale combinant un modèle spectral, des structures hiérarchiques et des contraintes},
+	date = {2000}
+}
+
+
 @inproceedings{allombert2007system,
   title={A system of interactive scores based on Petri nets},
   author={Allombert, Antoine and Assayag, G{\'e}rard and Desainte-Catherine, Myriam and others},
