--- a/src/existant.tex
+++ b/src/existant.tex
@@ -235,16 +235,41 @@ King: estimating latency between arbitrary internet end hosts
 Method and system for peer-to-peer network latency measurement % http://www.google.com/patents/US6012096
 
 
-\section{Projet OSSIA}
-Le projet \ac{OSSIA}
+\section{Projet OSSIA et partitions interactives}
+Le projet \ac{OSSIA} utilise les acquis du projet \brand{Virage} (TODO cite) qui l'a précédé, ainsi que ceux de différents formalismes de partitions interactives. Il est aussi en interaction avec le projet \brand{INÉDIT} qui vise à rendre interopérable différents outils de création musicale et de composition.
 
-(Présentation travaux Allombert, Toro, Arias, etc.)
+\subsection{Partitions interactives}
+\subsubsection{Origines : Boxes}
+Les premières recherches ont porté sur une méthode de combiner des structures fréquentielles entre elles afin de composer un morceau. Ces travaux, réalisés aux alentours de l'an $\num{2000}$ ont posé les bases des développements actuels, en introduisant les concepts de contraintes, de boites temporelles et de hiérarchisation dans le même logiciel \cite{beurive2000logiciel}, nommé \brand{Boxes}.
+\subsubsection{Premières méthodes}
+Les partitions interactives ont été à l'origine conçues pour offrir un formalisme, et donc des possibilités de provabilité et de vérification, au cas de la composition musicale. 
+L'idée originale a été de concevoir les partitions interactives comme un ensemble d'objets temporels rattachés à des relations d'Allen (TODO cite), qui sont une forme de contrainte logique. Les objets temporels peuvent contenir un processus et une contrainte \cite{allombert2007system}, et peuvent faire partie de différentes classes prédéfinies afin d'aider le compositeur. 
 
-Modelling Data Processing for Interactive Scores Using Coloured Petri Nets
+L'interactivité provient du fait que des évènements peuvent être déclenchés en temps-réel, sur scène, par un compositeur ou musicien, tout en maintenant une logique qui aura été écrite au préalable. Par exemple, la lecture d'une vidéo $V$ suit automatiquement la lecture d'un son $S$, lui-même déclenché lors de l'activation d'un capteur extérieur. 
 
+Une des problématiques principales est donc de maintenir les contraintes entre objets temporels, tout en permettant l'interactivité.
 
-\subsection{Scénarios interactifs}
-\subsection{Temps souple}
-\subsection{Les réseaux de Petri dans OSSIA}
+Plusieurs méthode ont été étudiées pour répondre à ce problème :
+\begin{itemize}
+\item Une méthode par contraintes concurrentes, insipirée de \ac{NTCC} \cite{allombert2006concurrent}(TODO).
+\item Une méthode par réseaux de Petri \cite{allombert2007system, allombert2009aspects}.
+\end{itemize}
+
+Ces méthodes ont été implémentées, avec de multiples extensions (présentées en détail dans \cite{toro2012structured} en section 3.2) dans les différents logiciels présentés en \cref{figheritageIScore}.
+
+\subsection{Précision des formalismes}
+Un des problèmes dans la formalisation présentée par Antoine Allombert est l'absence de modèle réunissant branchements et relations temporelles.
+
+Une solution possible, nommée \textit{Time Conditional-Branching Scores}, est avancée par Mauricio Toro dans sa thèse \cite{toro2012structured} (TODO).
+
+\subsection{Problématique du traitement de signal}
+Bien qu'à l'origine, le lien entre partitions interactives et traitement du signal était fort, notamment dans le logiciel \brand{Boxes}, les recherches plus récentes ont porté majoritairement sur un formalisme uniquement scénaristique, sans réelle préoccupation de ce qui était scénarisé.
+
+Un des problèmes principaux rencontrés est la gestion du temps : en effet, les cartes sons ont leur propre fréquence d'horloge, qui est généralement de $\num{44100}\si{\hertz}$, et fonctionnent par buffers, ce qui n'est pas toujours le cas des logiciels implémentants les différents formalismes de partitions interactives.
+
+Néanmoins, des approches ont été menées en parallèle pour essayer de relier les deux. Mauricio Toro présente dans sa thèse une méthode pour inclure des processus \ac{FauST} dans une partition interactive \cite[chapitre 8]{toro2012structured}.
+Cette approche est continuée par Florent Berthau avec le travail mené sur \brand{libLAScore}, une bibliothèque mêlant \brand{LibAudiostream} qui implémente \ac{FauST}, et \brand{libIscore} (TODO cite).
+
+Actuellement, un modèle basé sur la sémantique des réseaux de Petri, qui fonctionne par envoi de jetons correspondant aux paquets de donnée, est en cours de développement par Jaime Arias \cite{arias2014modelling}.
 \subsection{Exemple dans le formalisme OSSIA}
 
