--- a/src/acronymes.tex
+++ b/src/acronymes.tex
@@ -12,7 +12,8 @@
 \acrodef{GPIO}{General-Purpose Input/Output}
 \acrodef{PNML}{Petri Net Markup Language}
 \acrodef{NTCC}{Non-deterministic Concurrent Constraint Calculus}
-\acrodef{FauST}{Functional audio STream }
+\acrodef{FAUST}{Functional Audio Stream}
+\acrodef{DNS}{Domain Name System}
 \acrodef{CRR}{Conservatoire à rayonnement régional}
 \acrodef{MCLT}{Modulated Complex Lapped Transform}
 \acrodef{LSB}{Least Significant Bit}
