--- a/src/personnalisation.tex
+++ b/src/personnalisation.tex
@@ -72,7 +72,7 @@ escapeinside={\%*}{*)}
 
 % Commande \brand
 \renewcommand*{\acsfont}[1]{\brand{#1}}
-\newcommand{\brand}[1]{\textsc{\textbf{#1}}}
+\newcommand{\brand}[1]{{\textbf{#1}}}
 
 % Paragraphe avec saut de ligne
 \let\oldpar\paragraph
