--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -11,13 +11,19 @@
 	date = {2000}
 }
 
-
 @inproceedings{allombert2007system,
   title={A system of interactive scores based on Petri nets},
   author={Allombert, Antoine and Assayag, G{\'e}rard and Desainte-Catherine, Myriam and others},
   booktitle={Proc. of the 4th Sound and Music Conference},
   pages={158--165},
   year={2007}
+}
+
+@inproceedings{allombert2006concurrent,
+	title={Concurrent constraints models for interactive scores},
+	author={Allombert, Antoine and Assayag, G{\'e}rard and Desainte-Catherine, Myriam and Rueda, Camilo and others},
+	booktitle={Proc. of the 3rd Sound and Music Computing Conference},
+	year={2006}
 }
 
 @inproceedings{allombert2008iscore,
@@ -31,9 +37,22 @@
 
 @inproceedings{allombert2010virage,
   title={VIRAGE: Designing an Interactive Intermedia Sequencer from Users Requirements and Theoretical Background},
-  author={Allombert, Antoine and Marczak, Raph{\"e}l and Desainte-Catherine, Myriam and Baltazar, Pascal and Garnier, Laurent and Yeti, Blue},
+  author={Allombert, Antoine and Marczak, Rapha{\"e}l and Desainte-Catherine, Myriam and Baltazar, Pascal and Garnier, Laurent and Yeti, Blue},
   booktitle={Proceedings of the International Computer Music Conference},
   year={2010}
+}
+
+@unpublished{desaintecatherine2014interactive,
+	title={Interactive scores with synchronous processes: Extending I-score with the libAudioStream},
+	author={Desainte-Catherine, Myriam and Berthaut, Florent and Letz, Stéphane and Orlarey, Yann},
+	year={2014}
+}
+
+@phdthesis{mauricio2012structured,
+	title={Structured Interactive Scores},
+	author={Mauricio, Toro},
+	year={2012},
+	school={Universit{\'e} Sciences et Technologies-Bordeaux I}
 }
 
 @book{lynch1996distributed,
@@ -48,6 +67,29 @@
 	title = {Modelling Data Processing for Interactive Scores Using Coloured Petri Nets},
 	journal = { },
 	date = {submitted}
+}
+
+@article{allen1983maintaining,
+	title={Maintaining knowledge about temporal intervals},
+	author={Allen, James F},
+	journal={Communications of the ACM},
+	volume={26},
+	number={11},
+	pages={832--843},
+	year={1983},
+	publisher={ACM}
+}
+
+@article{baltazar2009virage,
+	title={Virage: Une r{\'e}flexion pluridisciplinaire autour du temps dans la cr{\'e}ation num{\'e}rique},
+	author={Baltazar, Pascal and Allombert, Antoine and Marczak, Rapha{\"e}l and Couturier, Jean-Michel and Roy, Magnolya and S{\`e}des, Anne and Desainte-Catherine, Myriam and others},
+	year={2009}
+}
+
+@article{fober2013caracterisation,
+	title={Caract{\'e}risation et repr{\'e}sentation des processus musicaux.},
+	author={Fober, Dominique},
+	year={2013}
 }
 
 @book{david2010discrete,
@@ -552,4 +594,43 @@ address = {Los Alamitos, CA, USA},
 	author={Syed, Affan A and Heidemann, John S},
 	booktitle={INFOCOM},
 	year={2006}
+}
+
+@article{torres1999plausible,
+	title={Plausible clocks: constant size logical clocks for distributed systems},
+	author={Torres-Rojas, Francisco J and Ahamad, Mustaque},
+	journal={Distributed Computing},
+	volume={12},
+	number={4},
+	pages={179--195},
+	year={1999},
+	publisher={Springer}
+}
+
+@misc{banerjee2012network,
+	title={Network latency estimation},
+	author={Banerjee, S. and Sharma, P. and Lee, S.J.},
+	url={http://www.google.com/patents/US8254264},
+	year={2012},
+	month=aug # "~28",
+	publisher={Google Patents},
+	note={US Patent 8,254,264}
+}
+
+@inproceedings{gummadi2002king,
+	title={King: Estimating latency between arbitrary internet end hosts},
+	author={Gummadi, Krishna P and Saroiu, Stefan and Gribble, Steven D},
+	booktitle={Proceedings of the 2nd ACM SIGCOMM Workshop on Internet measurment},
+	pages={5--18},
+	year={2002},
+	organization={ACM}
+}
+
+@patent{im2000method,
+	title={Method and system for peer-to-peer network latency measurement},
+	author={Im, Hoon and Link, Craig A},
+	year={2000},
+	month=jan # "~4",
+	publisher={Google Patents},
+	note={US Patent 6,012,096}
 }
