--- a/src/existant.tex
+++ b/src/existant.tex
@@ -146,7 +146,7 @@ Un autre ouvrage \cite{attiya2004distributed} met plus l'accent sur la simulatio
 \subsection{Vérification}
 La vérification des algorithmes distribués est une branche majeure qui nécessite des outils particuliers par rapport aux méthodes formelles usuelles, comme la \gls{logiquedehoare} telle qu'elle fut définie à l'origine par exemple.
 
-Les outils de base sont la sécurité (\textit{safety} et la vivacité \textit{liveness}), telles qu'énoncées par Leslie Lamport \cite{lamport1977proving}.
+Les outils de base sont la sécurité (\textit{safety}) et la vivacité (\textit{liveness}), telles qu'énoncées par Leslie Lamport \cite{lamport1977proving}.
 
 De nombreux articles plus ou moins récents sur ce sujet sont référencés par un laboratoire de l'université de l'Illinois \cite{formaldistributed}.
 
