--- a/src/existant.tex
+++ b/src/existant.tex
@@ -251,11 +251,11 @@ Une des problématiques principales est donc de maintenir les contraintes entre 
 
 Plusieurs méthode ont été étudiées pour répondre à ce problème :
 \begin{itemize}
-\item Une méthode par contraintes concurrentes, insipirée de \ac{NTCC} \cite{allombert2006concurrent}.
+\item Une méthode par contraintes concurrentes, inspirée de \ac{NTCC} \cite{allombert2006concurrent}.
 \item Une méthode par réseaux de Petri \cite{allombert2007system, allombert2009aspects}.
 \end{itemize}
 
-Ces méthodes ont été implémentées, avec de multiples extensions (présentées en détail dans \cite{toro2012structured} en section 3.2) dans les différents logiciels présentés en \cref{figheritageIScore}.
+Ces méthodes ont été implémentées, avec de multiples extensions (présentées en détail dans \cite{mauricio2012structured} en section 3.2) dans les différents logiciels présentés en \cref{figheritageIScore}.
 
 \subsection{Précision des formalismes}
 Un des problèmes dans les méthodes présentées par Antoine Allombert est l'absence de modèle réunissant branchements et relations temporelles.
@@ -272,5 +272,6 @@ Cette approche est continuée par Florent Berthaut avec le travail mené sur \br
 
 Actuellement, un autre modèle entièrement basé sur la sémantique des réseaux de Petri, qui fonctionne par envoi de jetons correspondant aux paquets de donnée, est en cours de développement par Jaime Arias \cite{arias2014modelling}.
 
-\subsection{Exemple dans le formalisme OSSIA}
+\subsection{Développement dans OSSIA}
+Le projet \ac{OSSIA} se place à un niveau plus abstrait que les différents formalismes de partitions interactives.
 
