--- a/src/formalisation/formalisation.tex
+++ b/src/formalisation/formalisation.tex
@@ -390,3 +390,4 @@ Dans cette partie, nous faisons une brève comparaison entre les méthodes vues 
 En raison du nombre de points positifs de la méthode 2, et de la durée du stage, c'est celle qui a été principalement retenue pour vérifications ultérieures.
 
 \input{formalisation/ameliorations2f}
+\input{formalisation/preuves}
